responses to dto in get methods for Treatment, Hospitalization and ComplementaryStudy